[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
derive_more = { workspace = true }
num-bigint = { workspace = true }
num-bigint-dig = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
