[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
astro-float = { workspace = true }
itertools = { workspace = true }
derive_more = { workspace = true }
num-bigint = { workspace = true }
num-bigint-dig = { workspace = true }
num-complex = { workspace = true, features = ["rand"] }
num-integer = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
