[package]
name = "fhew"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../../util" }
itertools = { workspace = true }
derive_more = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
