[package]
name = "fhew"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true }
itertools = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
util = { path = "../../util" }
